add the SAR and Research Document to bib file

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -75,6 +75,13 @@ Data, and Methods},
   year = {2016}
 }
 
+@techreport{DFO2017_Del,
+  author = {DFO},
+  title = {Delineation of Significant Areas of Coldwater Corals and Sponge-Dominated Communities in Canada's Atlantic and Eastern Arctic Marine Waters and their Overlap with Fishing Activity},
+  institution = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep. 2017/007},
+  year = {2017}
+}
+
 @techreport{DFO2020NBW_imphabitat,
   author = {DFO},
   title = {Assessment of the Distribution, Movements, and Habitat Use of Northern Bottlenose Whales on the Scotian Shelf to Support the Identification of Important Habitat},
@@ -223,6 +230,13 @@ Data, and Methods},
   year = {2020},
   note = {R package version 1.30},
   url = {https://yihui.org/knitr/}
+}
+
+@techreport{Koen-Alonso2021,
+  author = {Koen-Alonso, M., Favaro, C., Ollerhead, N., Benoît, H., Bourdages, H., Sainte-Marie, B., Treble, M., Hedges, K., Kenchington, E., Lirette, C., King, M., Coffen-Smout, S., and J. Murillo},
+  title = {Analysis of the overlap between fishing effort and Significant Benthic Areas in Canada's Atlantic and Eastern Arctic marine waters},
+  institution = {DFO Can. Sci. Advis. Sec. Res. Doc. 2018/015. xvii + 270 p.},
+  year = {2018}
 }
 
 @techreport{Lazin2021,
