--- a/reports/sections/conservationSites/conservationSites_en.Rmd
+++ b/reports/sections/conservationSites/conservationSites_en.Rmd
@@ -57,7 +57,7 @@ mpaCheckOuput <- if(!is.null(mpaClipped$studyData)){
 writeLines(mpaCheckOuput)
 ```
 
-```{r mpa-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(conservationSites_rr, "EN"), 'Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. Boundaries of the proposed new sites are preliminary and subject to change following engagement and consultation. The search area is shown as a red outline, and a more detailed view if shown in the figure below, if relevant data are present. Dashed grey lines indicate international boundaries.')}
+```{r mpa-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(conservationSites_rr, "EN"), 'Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. Boundaries of the proposed new sites are preliminary and subject to change following engagement and consultation. The search area is shown as a red outline, and a more detailed view is shown in the figure below, if relevant data are present. Dashed grey lines indicate international boundaries.')}
 if (!is.null(mpaClipped$regionData)){
   plot_rr_sf(regionMap, mpaClipped$regionData, conservationSites_rr$attribute, 
              outlines=FALSE, colorMap = mpaCols, alpha = mpaAlpha)
