--- a/reports/sections/ilts/ilts_en.Rmd
+++ b/reports/sections/ilts/ilts_en.Rmd
@@ -53,7 +53,7 @@ writeLines(noquote(iltsCheck))
 ```
 
 
-```{r ilts-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(ilts_rr, "EN"), 'Map of Inshore Lobster Trawl Surveys (ITLS) within the search area. Blue lines indicate the location of each NEST trawl sample.')}
+```{r ilts-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(ilts_rr, "EN"), 'Map of Inshore Lobster Trawl Surveys (ITLS) within the search area (red outline). Blue lines indicate the location of each NEST trawl sample.')}
 
 if (!is.null(iltsClipped$studyData)) {
     plot_rr_sf(areaMap, iltsClipped$mapData, lwd = 1, colour = "blue")
@@ -63,7 +63,7 @@ if (!is.null(iltsClipped$studyData)) {
 ```{r ilts-SAR-table}
 if (!is.null(iltsClipped$studyData)) {
   if (nrow(iltsSarTable) > 0) {
-    knitr::kable(iltsSarTable, align="l", caption=paste("\\label{tab:ilts_SAR_table}", write_caption_blurb(ilts_rr, "EN"),  "Inshore Lobster Trawl Survey (ITLS) observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(iltsSarTable, align="l", caption=paste("\\label{tab:ilts_SAR_table}", write_caption_blurb(ilts_rr, "EN"),  "Inshore Lobster Trawl Survey (ITLS) observation records of species contained within the search area and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
