--- a/reports/sections/pasBay/pasBay_en.Rmd
+++ b/reports/sections/pasBay/pasBay_en.Rmd
@@ -53,7 +53,7 @@ pasBayCheck <- if (!is.null(pasBayClipped$studyData)) {
 writeLines(noquote(pasBayCheck))
 ```
 
-```{r pasBay-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(pasBay_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from the Passamaquoddy Bay Biodiversity Trawls.  Blue lines indicate the location of each trawl sample.')}
+```{r pasBay-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(pasBay_rr, "EN"), 'Map of Passamaquoddy Bay Biodiversity Trawls within the search area (red outline). Blue lines indicate the location of each trawl sample. Data were obtained from @OpenData_pasBay')}
 
 if (!is.null(pasBayClipped$studyData)) {
     plot_rr_sf(areaMap, pasBayClipped$mapData, lwd = 0.7, colour = "blue")
