--- a/reports/sections/isleMadame/isleMadame_en.rmd
+++ b/reports/sections/isleMadame/isleMadame_en.rmd
@@ -43,7 +43,7 @@ write_meta(imSection_rr, "EN")
 #### *Area-specific `r imSection_rr$datasetName` results*
 ```{r {{imSection}}-results, include=FALSE, cache=FALSE}
 # clip the data to the Study and Map areas:
-outputList <- master_intersect(imSection_rr$data_sf, mapDataList)
+outputList <- master_intersect(imSection_rr$data_sf, mapDataList, getRegion = TRUE)
 
 outputTable <- isle_madame_table(outputList$studyData, cols={{ cols }}, colnames = {{ colnames }})
 
@@ -57,6 +57,14 @@ outputReport <- if (is.null(outputList$studyData)) {
   paste("* There are relevant", imSection_rr$datasetName, "records for this search area.")
 }
 writeLines(noquote(outputReport))
+```
+
+```{r {{imSection}}-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(imSection_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from', imSection_rr$datasetName, 'records .')}
+if (!is.null(outputList$regionData)) {
+  # common plotting function:
+  plot_rr_sf(regionMap, outputList$regionData, attribute = 
+               imSection_rr$attribute)
+}
 ```
 
 ```{r {{imSection}}-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(imSection_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from', imSection_rr$datasetName, 'records .')}
