--- a/app/templates/EN/generic_intro.Rmd
+++ b/app/templates/EN/generic_intro.Rmd
@@ -100,10 +100,31 @@ knitr::kable(table_tier,align="l",
 ```
 
 
+# **RESULTS SUMMARY**
+
+```{r intro-table}
+finalSummaryIntroTable <- knitr::load_cache('summary-intro-gen', 'finalSummaryIntroTable')
+
+if (is.data.frame(finalSummaryIntroTable)){
+  if (nrow(finalSummaryIntroTable) > 0){
+    knitr::kable(finalSummaryIntroTable, align="l",
+      caption = "Overview of which datasources queried have results within the study area", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+  }
+}
+```
+
+
+
 <!-- MAIN SECTIONS -->
 
 # **DATA DISCOVERY OUTPUTS**  
 {{add_parts}}
+
+```{r summary-intro-gen, cache=TRUE}
+finalSummaryIntroTable <- summaryIntroTable
+```
+
+
 
 <!-- GENERIC END -->
 
@@ -116,7 +137,7 @@ This section provides an overall synthesis of regional data, data products of hu
 This section is a work-in-progress. It summarizes available information of human activities in the search area. Please contact data providers if data outside of these ranges are required. Outputs are not suitable for real-time, dynamic spatial planning.
 
 ```{r threat-class-table}
-if (!is.null(rrEnv$haClassTable)) {
+if (FALSE) {# (!is.null(rrEnv$haClassTable)) {
   absentCode <- "&nbsp;-&nbsp;"
   presentCode <- "&#x2714;"
   rrEnv$haClassTable[is.na(rrEnv$haClassTable)] <- FALSE
